--- a/styles/style.sass
+++ b/styles/style.sass
@@ -6,6 +6,48 @@
     margin: 0
 
 body
+    display: flex 
+    flex-wrap: wrap
+    height: 100vh  
+    background-color: #a684b6
+
+.add
+    position: fixed
+    top: 1rem
+    right: 1rem
+    padding: 5px 10px
+    background-color: #a56dbb
+    color: #fff
+    border: none
+    border-radius: 3px
+    cursor: pointer
+
+.note
+    background-color: #fff
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1)
+    margin: 30px 20px
+    height: 400px
+    width: 400px
+    textarea
+        font-size: 15px
+        border: none
+        height: 400px
+        width: 100%
+        padding: 20px
+
+.tools   
+    background-color: #5e84b4 
     display: flex
-    align-items: center
-    justify-content: center        
+    justify-content: flex-end
+    padding: 9px
+    button
+        background-color: transparent
+        border: none
+        color: #fff
+        margin-right: 10px
+        cursor: pointer
+        font-size: 15px
+
+
+.hidden
+    display: none
