--- a/styles/style.sass
+++ b/styles/style.sass
@@ -35,6 +35,9 @@ body
         width: 100%
         padding: 20px
 
+.main
+    padding: 30px
+
 .tools   
     background-color: #5e84b4 
     display: flex
